Blog tab filter functionality update

--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -1,46 +1,4 @@
-<section class="blog-tab-section">
-    <div class="container">
-       <div class="blog-tab-main">
-            <h2 class="tab-sec-heading">
-                Elevate Your E-Commerce: Insights and Strategies from Our Shopify Plus Experts
-            </h2>
-            <p class="primery-text">
-                Welcome to our Shopify Plus agency blog, your ultimate destination for e-commerce excellence. Dive into a wealth of industry-leading insights, expert tips, and cutting-edge strategies curated by our team of Shopify Plus specialists. Whether you're a seasoned entrepreneur or just starting your online business journey, our blog is your go-to resource for unlocking the full potential of Shopify Plus. Join us as we explore the latest trends, share success stories, and empower you to take your e-commerce game to the next level.
-            </p>
-            <form class="blog-search flex-center">
-                <input type="search" id="myInput" placeholder="Search....." name="search">
-                <button class="search-input-btn"><svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12.5998 2.3999C6.64915 2.3999 1.7998 7.24925 1.7998 13.1999C1.7998 19.1506 6.64915 23.9999 12.5998 23.9999C14.7729 23.9999 16.7952 23.3483 18.492 22.2374L26.0271 29.7726L28.5725 27.2272L21.1346 19.7894C22.5487 17.9629 23.3998 15.6807 23.3998 13.1999C23.3998 7.24925 18.5505 2.3999 12.5998 2.3999ZM12.5998 4.7999C17.2535 4.7999 20.9998 8.54616 20.9998 13.1999C20.9998 17.8536 17.2535 21.5999 12.5998 21.5999C7.94606 21.5999 4.1998 17.8536 4.1998 13.1999C4.1998 8.54616 7.94606 4.7999 12.5998 4.7999Z" fill="white"/>
-                    </svg>
-                </button>
-            </form>
-            <div class="no-records " style="display: none; ">
-                <p>No record found.</p>
-            </div>
-            <div class="blog-filter-tab">
-                <ul class="filter-tab-wrap flex-center">
-                    <li class="filter-tab-list">
-                        <a href="">all</a>
-                    </li>
-                    <li class="filter-tab-list">
-                        <a href="">Shopify Apps</a>
-                    </li>
-                    <li class="filter-tab-list">
-                        <a href="">shopify</a>
-                    </li>
-                    <li class="filter-tab-list">
-                        <a href="">ux/ui</a>
-                    </li> <li class="filter-tab-list">
-                        <a href="">e-commerce</a>
-                    </li>
-                    <li class="filter-tab-list">
-                        <a href="">seo</a>
-                    </li>
-                </ul>
-            </div>
-       </div>
-    </div>
-</section>
+
 <section class="blogs-section">
     <div class="container">
         <div class="our_work_all_wrap">
@@ -55,8 +13,75 @@
                     </p>
                 </div>
             </div>
+            <div class="blog-tab-section">
+                <div class="container">
+                   <div class="blog-tab-main">
+                        <!-- <h2 class="tab-sec-heading">
+                            Elevate Your E-Commerce: Insights and Strategies from Our Shopify Plus Experts
+                        </h2>
+                        <p class="primery-text">
+                            Welcome to our Shopify Plus agency blog, your ultimate destination for e-commerce excellence. Dive into a wealth of industry-leading insights, expert tips, and cutting-edge strategies curated by our team of Shopify Plus specialists. Whether you're a seasoned entrepreneur or just starting your online business journey, our blog is your go-to resource for unlocking the full potential of Shopify Plus. Join us as we explore the latest trends, share success stories, and empower you to take your e-commerce game to the next level.
+                        </p> -->
+                        <form class="blog-search flex-center">
+                            <input type="search" id="myInput" placeholder="Search....." name="search">
+                            <span class="search-input-btn flex-center"><svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12.5998 2.3999C6.64915 2.3999 1.7998 7.24925 1.7998 13.1999C1.7998 19.1506 6.64915 23.9999 12.5998 23.9999C14.7729 23.9999 16.7952 23.3483 18.492 22.2374L26.0271 29.7726L28.5725 27.2272L21.1346 19.7894C22.5487 17.9629 23.3998 15.6807 23.3998 13.1999C23.3998 7.24925 18.5505 2.3999 12.5998 2.3999ZM12.5998 4.7999C17.2535 4.7999 20.9998 8.54616 20.9998 13.1999C20.9998 17.8536 17.2535 21.5999 12.5998 21.5999C7.94606 21.5999 4.1998 17.8536 4.1998 13.1999C4.1998 8.54616 7.94606 4.7999 12.5998 4.7999Z" fill="white"/>
+                                </svg>
+                            </span>
+                        </form>
+                        <div class="no-records " style="display: none; ">
+                            <p>No record found.</p>
+                        </div>
+                        
+                   </div>
+                   <div class="blog-filter-tab">
+                    <ul class="filter-tab-wrap flex-center desktop">
+                        <li class="filter-tab-list active" data-value="all">
+                            <span class="green-btn-text">All</span>
+                        </li>
+                        <li class="filter-tab-list" data-value="shopify-apps">
+                            <span class="green-btn-text">Shopify Apps</span>
+                        </li>
+                        <li class="filter-tab-list" data-value="Shopify">
+                            <span class="green-btn-text">Shopify</span>
+                        </li>
+                        <li class="filter-tab-list" data-value="Ux/Ui">
+                            <span class="green-btn-text">Ux/Ui</span>
+                        </li> 
+                        <li class="filter-tab-list" data-value="E-commerce">
+                            <span class="green-btn-text">E-commerce</span>
+                        </li>
+                        <li class="filter-tab-list" data-value="seo">
+                            <span class="green-btn-text">Seo</span>
+                        </li>
+                    </ul>
+                    <ul class="filter-tab-wrap flex-center mobile">
+                        <ngx-slick-carousel class="b_f_btn" #slickModal="slick-carousel" [config]="blogList">
+                            <li ngxSlickItem class="filter-tab-list active" data-value="all">
+                                <span class="green-btn-text">All</span>
+                            </li>
+                            <li ngxSlickItem class="filter-tab-list" data-value="shopify-apps">
+                                <span class="green-btn-text">Shopify Apps</span>
+                            </li>
+                            <li ngxSlickItem class="filter-tab-list" data-value="Shopify">
+                                <span class="green-btn-text">Shopify</span>
+                            </li>
+                            <li ngxSlickItem class="filter-tab-list" data-value="Ux/Ui">
+                                <span class="green-btn-text">Ux/Ui</span>
+                            </li> 
+                            <li ngxSlickItem class="filter-tab-list" data-value="E-commerce">
+                                <span class="green-btn-text">E-commerce</span>
+                            </li>
+                            <li ngxSlickItem class="filter-tab-list" data-value="seo">
+                                <span class="green-btn-text">Seo</span>
+                            </li>
+                        </ngx-slick-carousel>
+                    </ul>
+                </div>
+                </div>
+            </div>
             <div class="blog_cards_wrapper flex" id="blogFilter">
-                <a routerLink="/resource/tips-for-optimizing-your-shopify-store" class="blog_card_wrap">
+                <a routerLink="/resource/tips-for-optimizing-your-shopify-store" id="seo" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-one.webp" alt="blog-one">
                     </div>
@@ -65,7 +90,7 @@
                         <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
                     </div>
                 </a>
-                <a routerLink="/resource/use-instagram-to-drive-sales" class="blog_card_wrap">
+                <a routerLink="/resource/apps-for-streamlining-your-business" id="E-commerce" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog-two">
                     </div>
@@ -74,7 +99,7 @@
                         <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
                     </div>
                 </a>
-                <a routerLink="/resource/apps-for-streamlining-your-business" class="blog_card_wrap">
+                <a routerLink="/resource/use-instagram-to-drive-sales" id="shopify-apps" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog-three">
                     </div>
@@ -83,7 +108,7 @@
                         <p>5 Best Shopify Apps for Streamlining Your Business Operations</p>
                     </div>
                 </a>
-                <a routerLink="/resource/benefits-of-integrating-email-marketing" class="blog_card_wrap">
+                <a routerLink="/resource/benefits-of-integrating-email-marketing" id="Shopify" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-four.webp" alt="blog-four">
                     </div>
@@ -92,7 +117,7 @@
                         <p>The Benefits of Integrating Email Marketing into Your Shopify Store</p>
                     </div>
                 </a>
-                <a routerLink="/resource/build-a-winning-shopify-store" class="blog_card_wrap">
+                <a routerLink="/resource/build-a-winning-shopify-store" id="E-commerce" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-five.webp" alt="blog-five">
                     </div>
@@ -101,7 +126,7 @@
                         <p>How to Build a Winning Shopify Store Design</p>
                     </div>
                 </a>
-                <a routerLink="/resource/power-of-language-translation-with-langshop-app" class="blog_card_wrap">
+                <a routerLink="/resource/power-of-language-translation-with-langshop-app" id="shopify-apps" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-six.webp" alt="blog-six">
                     </div>
@@ -110,7 +135,7 @@
                         <p>Unlock Global Growth: Harness the Power of Language Translation with LangShop App</p>
                     </div>
                 </a>
-                <a routerLink="/resource/websites-seo-ranking-with-html-and-xml-sitemaps" class="blog_card_wrap">
+                <a routerLink="/resource/websites-seo-ranking-with-html-and-xml-sitemaps" id="seo" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-seven.webp" alt="blog-seven">
                     </div>
@@ -119,7 +144,7 @@
                         <p>Boost Your Website's SEO Ranking with HTML and XML Sitemaps</p>
                     </div>
                 </a>
-                <a routerLink="/resource/potential-of-pickup-delivery-date-in-the-pickeasy-app" class="blog_card_wrap">
+                <a routerLink="/resource/potential-of-pickup-delivery-date-in-the-pickeasy-app" id="shopify-apps" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-eight.webp" alt="blog-eight">
                     </div>
@@ -128,7 +153,7 @@
                         <p>Unleashing the Potential of Pickup Delivery Date in the Pickeasy App</p>
                     </div>
                 </a>
-                <a routerLink="/resource/best-auto-discounts-app-for-shopify-store" class="blog_card_wrap">
+                <a routerLink="/resource/best-auto-discounts-app-for-shopify-store" id="Shopify" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-nine.webp" alt="blog-nine">
                     </div>
@@ -137,7 +162,7 @@
                         <p>Best Auto Discounts app for shopify store - Abra Auto</p>
                     </div>
                 </a>
-                <a routerLink="/resource/auto-add-to-cart-free-gift-on-eg-auto" class="blog_card_wrap">
+                <a routerLink="/resource/auto-add-to-cart-free-gift-on-eg-auto" id="shopify-apps" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-ten.webp" alt="blog-ten">
                     </div>
@@ -146,7 +171,7 @@
                         <p>Maximising Savings: Auto Add to Cart Free Gift on EG Auto</p>
                     </div>
                 </a>
-                <a routerLink="/resource/elevate-your-shopify-store-with-the-section-store" class="blog_card_wrap">
+                <a routerLink="/resource/elevate-your-shopify-store-with-the-section-store" id="shopify-apps" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-eleven.webp" alt="blog-eleven">
                     </div>
@@ -155,7 +180,7 @@
                         <p>Elevate Your Shopify Store  with the Section Store Theme Sections App</p>
                     </div>
                 </a>
-                <a routerLink="/resource/a-reliable-tool-to-calculate-shipping-rates" class="blog_card_wrap">
+                <a routerLink="/resource/a-reliable-tool-to-calculate-shipping-rates" id="shopify-apps" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-twelve.webp" alt="blog-twelve">
                     </div>
@@ -164,7 +189,7 @@
                         <p>Looking for a reliable tool to calculate shipping rates? Consider the Shipeasy App!</p>
                     </div>
                 </a>
-                <a routerLink="/resource/the-impact-of-a-countdown-timer-bar-app" class="blog_card_wrap">
+                <a routerLink="/resource/the-impact-of-a-countdown-timer-bar-app" id="shopify-apps" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-thirteen.webp" alt="blog-thirteen">
                     </div>
@@ -173,7 +198,7 @@
                         <p>Elevate Your Efficiency: The Impact of a Countdown Timer Bar App</p>
                     </div>
                 </a>
-                <a routerLink="/resource/maximising-roi-multi-facebook-pixels" class="blog_card_wrap">
+                <a routerLink="/resource/maximising-roi-multi-facebook-pixels" id="shopify-apps" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-fourteen.webp" alt="blog-fourteen">
                     </div>
