--- a/src/app/resource-5/resource-5.component.html
+++ b/src/app/resource-5/resource-5.component.html
@@ -81,31 +81,31 @@
                     <h5 class="blog-service-title">Recommended Reading</h5>
                 </div>
                 <div class="service-button">
-                    <a class="cdk-btn-transparent" routerLink="/blog-list">View All</a>
+                    <a class="cdk-btn-transparent" routerLink="/resource">View All</a>
                 </div>
             </div>
             <div class="blog_cards_wrapper flex" id="blogFilter">
-                <a routerLink="/resource" class="blog_card_wrap">
+                <a routerLink="/resource/tips-for-optimizing-your-shopify-store" id="seo" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-one.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-one.webp" alt="blog-one">
                     </div>
                     <div class="blog-title-text">
                         <h3>January 02, 2023</h3>
                         <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
                     </div>
                 </a>
-                <a routerLink="/resource-3" class="blog_card_wrap">
+                <a routerLink="/resource/apps-for-streamlining-your-business" id="E-commerce" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-two.webp" alt="blog-two">
                     </div>
                     <div class="blog-title-text">
                         <h3>January 21, 2023</h3>
                         <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
                     </div>
                 </a>
-                <a routerLink="/resource-2" class="blog_card_wrap">
+                <a routerLink="/resource/use-instagram-to-drive-sales" id="shopify-apps" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-three.webp" alt="blog-three">
                     </div>
                     <div class="blog-title-text">
                         <h3>February 06, 2023</h3>
