--- a/src/app/blog-detail/blog-detail.component.html
+++ b/src/app/blog-detail/blog-detail.component.html
@@ -75,11 +75,11 @@
                     <h5 class="blog-service-title">Recommended Reading</h5>
                 </div>
                 <div class="service-button">
-                    <a class="cdk-btn-transparent" routerLink="/blog-list">View All</a>
+                    <a class="cdk-btn-transparent" routerLink="/resource">View All</a>
                 </div>
             </div>
             <div class="blog_cards_wrapper flex" id="blogFilter">
-                <a routerLink="/resource/use-instagram-to-drive-sales" class="blog_card_wrap">
+                <a routerLink="/resource/apps-for-streamlining-your-business" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
                     </div>
@@ -88,7 +88,7 @@
                         <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
                     </div>
                 </a>
-                <a routerLink="/resource/apps-for-streamlining-your-business" class="blog_card_wrap">
+                <a routerLink="/resource/use-instagram-to-drive-sales" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
                     </div>
