--- a/src/app/blog-list/blog-list.component.css
+++ b/src/app/blog-list/blog-list.component.css
@@ -1,9 +1,12 @@
 .blog-tab-section .container {
-    padding: 0 30px;
+    padding: 0 20px 0 0;
 }
 .blog-tab-section .blog-tab-main {
-    padding: 110px 130px 62px;
+    padding: 0px 130px 0px;
     text-align: center;
+}
+.blog-filter-tab {
+    padding-bottom: 60px;
 }
 .blog-tab-section .blog-tab-main .tab-sec-heading {
     font-size: 40px;
@@ -62,7 +65,7 @@
     align-items: center;
     justify-content: center;
 }
-.blog-filter-tab .filter-tab-wrap .filter-tab-list a {
+.blog-filter-tab .filter-tab-wrap .filter-tab-list .green-btn-text {
     text-decoration: none;
     font-size: 20px;
     line-height: 23.7px;
@@ -70,6 +73,23 @@
     font-family: var(--second-heading);
     color: #37C8AE;
     text-transform: capitalize;
+}
+.blog-filter-tab .filter-tab-wrap .filter-tab-list.active,
+.blog-filter-tab .filter-tab-wrap .filter-tab-list:hover {
+    background: #37C8AE;
+}
+.blog-filter-tab .filter-tab-wrap .filter-tab-list.active .green-btn-text,
+.blog-filter-tab .filter-tab-wrap .filter-tab-list:hover .green-btn-text {
+    color: #000 !important;
+}
+.no-records {
+    padding-bottom: 20px;
+    margin-top: -20px;
+}
+.no-records p {
+    font-size: 20px;
+    line-height: 20px;
+    font-family: var(--second-heading);
 }
 @media only screen and (max-width:767px) {
     .blogs-section {
@@ -80,5 +100,39 @@
     }
     .blogs-section .our_work_all_wrap .service-head .service-text p {
         padding-right: 0px;
+    }
+    .blog-tab-section .blog-tab-main .blog-search {
+        margin-bottom: 40px;
+    }
+    .blog-tab-section .blog-tab-main {
+        padding: 0px 0px 0px;
+    }
+    .blog-tab-section .container {
+        padding: 0 0px 0 0;
+    }
+    .no-records {
+        margin-top: -20px;
+    }
+    .blog-filter-tab .filter-tab-wrap .filter-tab-list {
+        margin-right: 20px;
+    }
+}
+@media only screen and (min-width:768px) and (max-width:991px) {
+    .blog-filter-tab .filter-tab-wrap .filter-tab-list .green-btn-text {
+        font-size: 15px;
+        line-height: 20px;
+    }
+    .blog-tab-section .blog-tab-main .blog-search {
+        margin-bottom: 40px;
+    }
+    .blog-filter-tab .filter-tab-wrap .filter-tab-list {
+        height: 40px;
+    }
+    .blog-tab-section .blog-tab-main .blog-search #myInput {
+        width: 447px;
+        height: 45px;
+    }
+    .blog-tab-section .blog-tab-main .blog-search .search-input-btn {
+        height: 45px;
     }
 }
