blog links & service links update

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,7 +16,7 @@
                 <div class="footer-menu">
                     <ul class="menu-wrap flex">
                         <li class="menu-list">
-                            <a routerLinkActive="active" routerLink="/about">About</a>
+                            <a routerLinkActive="active" routerLink="/about">About Us</a>
                         </li>
                         <li class="menu-list">
                             <a routerLinkActive="active" routerLink="/our-team">Our Team</a>
@@ -114,7 +114,7 @@
         <div class="footer_mobile_menu_wrap mobile">
             <ul class="footer-mobile-menu">
                 <li class="mobile-list">
-                    <a routerLinkActive="active" routerLink="/about">About</a>
+                    <a routerLinkActive="active" routerLink="/about">About Us</a>
                 </li>
                 <li class="mobile-list">
                     <a routerLinkActive="active" routerLink="/our-team">Our team</a>
