--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
             <div class="menu-wrap flex">
                 <ul class="flex menu-ul">
                     <li>
-                        <a routerLinkActive="active" routerLink="/about">About</a>
+                        <a routerLinkActive="active" routerLink="/about">About Us</a>
                     </li>
                     <li class="dropdown">
                         <a routerLinkActive="active" routerLink="/service">Service</a>
@@ -38,25 +38,25 @@
                                        <ul>
                                         <ngx-slick-carousel class="slider" #slickModal="slick-carousel" [config]="mega_menu_slider">
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/service-details">UX/UI Design</a>
+                                                <a routerLink="/service/service-details">UX/UI Design</a>
                                             </li>
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/shopify-web">shopify Web Development</a>
+                                                <a routerLink="/service/shopify-web">shopify Web Development</a>
                                             </li>
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/strategy&cro">Strategy & CRO Insights</a>
+                                                <a routerLink="/service/strategy&cro">Strategy & CRO Insights</a>
                                             </li>
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/internationalization">Internationalization</a>
+                                                <a routerLink="/service/internationalization">Internationalization</a>
                                             </li>
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/data-migration">Data Migration</a>
+                                                <a routerLink="/service/data-migration">Data Migration</a>
                                             </li>
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/headless">Headless & Composable Commerce</a>
+                                                <a routerLink="/service/headless">Headless & Composable Commerce</a>
                                             </li>
                                             <li class="drop-list item" ngxSlickItem >
-                                                <a routerLink="/shopify-app">Custom Shopify App Development</a>
+                                                <a routerLink="/service/shopify-app">Custom Shopify App Development</a>
                                             </li>
                                             </ngx-slick-carousel>
                                        </ul>
@@ -80,7 +80,7 @@
         <div class="menu-wrap-mobile" id="menu">
             <ul class="menu-ul-mobile">
                 <li>
-                    <a class="menu-item" routerLinkActive="active" routerLink="/about">About</a>
+                    <a class="menu-item" routerLinkActive="active" routerLink="/about">About Us</a>
                 </li>
                 <li class="dm-service">
                     <div class="flex">
@@ -89,25 +89,25 @@
                         <div class="tabcontent">
                             <ul class="">
                                 <li class="drop-list">
-                                    <a class="menu-item" routerLink="/service-details">UX/UI Design</a>
+                                    <a class="menu-item" routerLink="/service/service-details">UX/UI Design</a>
                                 </li>
                                 <li class="drop-list">
-                                    <a class="menu-item" routerLink="/shopify-web">shopify Web Development</a>
+                                    <a class="menu-item" routerLink="/service/shopify-web">shopify Web Development</a>
                                 </li>
                                 <li class="drop-list">
-                                    <a class="menu-item" routerLink="/strategy&cro" >Strategy & CRO Insights</a>
+                                    <a class="menu-item" routerLink="/service/strategy&cro" >Strategy & CRO Insights</a>
                                 </li>
                                 <li class="drop-list">
-                                    <a class="menu-item" href="/">Replatforming</a>
+                                    <a class="menu-item" routerLink="/service/internationalization">Internationalization</a>
                                 </li>
                                 <li class="drop-list">
-                                    <a class="menu-item" routerLink="/data-migration">Data Migration</a>
+                                    <a class="menu-item" routerLink="/service/data-migration">Data Migration</a>
                                 </li>
                                 <li class="drop-list">
-                                    <a class="menu-item" href="/">theme development</a>
+                                    <a class="menu-item" routerLink="/service/headless">Headless & Composable Commerce</a>
                                 </li>
                                 <li class="drop-list">
-                                    <a class="menu-item" routerLink="/shopify-app">Custom Shopify App Development</a>
+                                    <a class="menu-item" routerLink="/service/shopify-app">Custom Shopify App Development</a>
                                 </li>
                             </ul>
                         </div>
