--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -29,27 +29,27 @@
             <div class="service_body_wrap">
                 <ul class="service-body desktop">
                     <li class="service-list">
-                        <a routerLink="/service-details" class="list-head result_hover">UX/UI Design</a>
+                        <a routerLink="/service/service-details" class="list-head result_hover">UX/UI Design</a>
                         <span class="list-text">Elevate user experiences with our expert UX/UI design service, seamlessly blending aesthetics and functionality for digital excellence.</span>
                     </li>
                     <li class="service-list">
-                        <a routerLink="/shopify-web" class="list-head">Shopify Development</a>
+                        <a routerLink="/service/shopify-web" class="list-head">Shopify Development</a>
                         <span class="list-text">Unlock e-commerce success with our Shopify development service, tailoring solutions that seamlessly integrate innovation and user-friendly functionality.</span>
                     </li>
                     <li class="service-list">
-                        <a routerLink="/data-migration" class="list-head">Data Migration</a>
+                        <a routerLink="/service/data-migration" class="list-head">Data Migration</a>
                         <span class="list-text">UEffortlessly transition your data with precision and reliability through our expert data migration service, ensuring a seamless and secure transfer.</span>
                     </li>
                     <li class="service-list">
-                        <a routerLink="/strategy&cro" class="list-head">Strategy & CRO Insights</a>
+                        <a routerLink="/service/strategy&cro" class="list-head">Strategy & CRO Insights</a>
                         <span class="list-text">UX/UI design refers to the process of creating intuitive and visually appealing interfaces for digital products, such as websites and mobile apps.</span>
                     </li>
                     <li class="service-list">
-                        <a routerLink="/internationalization" class="list-head">Internationalization</a>
+                        <a routerLink="/service/internationalization" class="list-head">Internationalization</a>
                         <span class="list-text">Expand your reach with our internationalization service, strategically navigating cultural nuances and linguistic diversity to enhance your global presence.</span>
                     </li>
                     <li class="service-list">
-                        <a routerLink="/headless" class="list-head">Headless & Composable Commerce</a>
+                        <a routerLink="/service/headless" class="list-head">Headless & Composable Commerce</a>
                         <span class="list-text">Revolutionize your commerce experience with our Headless & Composable Commerce service, seamlessly combining flexibility and innovation for a tailored, future-proofed digital solution.</span>
                     </li>
                     <li class="service-list">
@@ -57,7 +57,7 @@
                         <span class="list-text">Maximize your online success with our Conversion Rate Optimization (CRO) service, meticulously fine-tuning user experiences to turn clicks into conversions.</span>
                     </li>
                     <li class="service-list">
-                        <a routerLink="/shopify-app" class="list-head">Shopify App Development</a>
+                        <a routerLink="/service/shopify-app" class="list-head">Shopify App Development</a>
                         <span class="list-text">Empower your Shopify store with our expert Shopify App Development, customizing functionalities and enhancing user experiences for optimal e-commerce performance.</span>
                     </li>
                     <li class="service-list">
@@ -67,7 +67,7 @@
                 </ul>
                 <div class="service_mobile_tabs mobile">
                     <div class="service_tabs">
-                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/service-details">UX/UI Design</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/service/service-details">UX/UI Design</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
                             <circle cx="11" cy="11" r="10.5" stroke="#37C8AE"/>
                             <path d="M10.3416 7.17447L10.7777 6.73844C10.9623 6.55382 11.2608 6.55382 11.4435 6.73844L15.2616 10.5546C15.4463 10.7392 15.4463 11.0378 15.2616 11.2204L11.4435 15.0386C11.2589 15.2232 10.9603 15.2232 10.7777 15.0386L10.3416 14.6026C10.1551 14.416 10.159 14.1115 10.3495 13.9289L12.7162 11.6741H7.07147C6.81025 11.6741 6.6001 11.464 6.6001 11.2028V10.5743C6.6001 10.313 6.81025 10.1029 7.07147 10.1029H12.7162L10.3495 7.84814C10.157 7.66548 10.1531 7.36105 10.3416 7.17447Z" fill="white"/>
                             </svg></span></h3>
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="service_tabs">
-                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/shopify-web">Shopify Development</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/service/shopify-web">Shopify Development</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
                             <circle cx="11" cy="11" r="10.5" stroke="#37C8AE"/>
                             <path d="M10.3416 7.17447L10.7777 6.73844C10.9623 6.55382 11.2608 6.55382 11.4435 6.73844L15.2616 10.5546C15.4463 10.7392 15.4463 11.0378 15.2616 11.2204L11.4435 15.0386C11.2589 15.2232 10.9603 15.2232 10.7777 15.0386L10.3416 14.6026C10.1551 14.416 10.159 14.1115 10.3495 13.9289L12.7162 11.6741H7.07147C6.81025 11.6741 6.6001 11.464 6.6001 11.2028V10.5743C6.6001 10.313 6.81025 10.1029 7.07147 10.1029H12.7162L10.3495 7.84814C10.157 7.66548 10.1531 7.36105 10.3416 7.17447Z" fill="white"/>
                             </svg></span></h3>
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="service_tabs">
-                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/data-migration">Data Migration</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/service/data-migration">Data Migration</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
                             <circle cx="11" cy="11" r="10.5" stroke="#37C8AE"/>
                             <path d="M10.3416 7.17447L10.7777 6.73844C10.9623 6.55382 11.2608 6.55382 11.4435 6.73844L15.2616 10.5546C15.4463 10.7392 15.4463 11.0378 15.2616 11.2204L11.4435 15.0386C11.2589 15.2232 10.9603 15.2232 10.7777 15.0386L10.3416 14.6026C10.1551 14.416 10.159 14.1115 10.3495 13.9289L12.7162 11.6741H7.07147C6.81025 11.6741 6.6001 11.464 6.6001 11.2028V10.5743C6.6001 10.313 6.81025 10.1029 7.07147 10.1029H12.7162L10.3495 7.84814C10.157 7.66548 10.1531 7.36105 10.3416 7.17447Z" fill="white"/>
                             </svg></span></h3>
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <div class="service_tabs">
-                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/strategy&cro">Strategy & CRO Insights</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/service/strategy&cro">Strategy & CRO Insights</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
                             <circle cx="11" cy="11" r="10.5" stroke="#37C8AE"/>
                             <path d="M10.3416 7.17447L10.7777 6.73844C10.9623 6.55382 11.2608 6.55382 11.4435 6.73844L15.2616 10.5546C15.4463 10.7392 15.4463 11.0378 15.2616 11.2204L11.4435 15.0386C11.2589 15.2232 10.9603 15.2232 10.7777 15.0386L10.3416 14.6026C10.1551 14.416 10.159 14.1115 10.3495 13.9289L12.7162 11.6741H7.07147C6.81025 11.6741 6.6001 11.464 6.6001 11.2028V10.5743C6.6001 10.313 6.81025 10.1029 7.07147 10.1029H12.7162L10.3495 7.84814C10.157 7.66548 10.1531 7.36105 10.3416 7.17447Z" fill="white"/>
                             </svg></span></h3>
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div class="service_tabs">
-                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/internationalization">Internationalization</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/service/internationalization">Internationalization</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
                             <circle cx="11" cy="11" r="10.5" stroke="#37C8AE"/>
                             <path d="M10.3416 7.17447L10.7777 6.73844C10.9623 6.55382 11.2608 6.55382 11.4435 6.73844L15.2616 10.5546C15.4463 10.7392 15.4463 11.0378 15.2616 11.2204L11.4435 15.0386C11.2589 15.2232 10.9603 15.2232 10.7777 15.0386L10.3416 14.6026C10.1551 14.416 10.159 14.1115 10.3495 13.9289L12.7162 11.6741H7.07147C6.81025 11.6741 6.6001 11.464 6.6001 11.2028V10.5743C6.6001 10.313 6.81025 10.1029 7.07147 10.1029H12.7162L10.3495 7.84814C10.157 7.66548 10.1531 7.36105 10.3416 7.17447Z" fill="white"/>
                             </svg></span></h3>
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <div class="service_tabs">
-                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/headless">Headless & Composable Commerce</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/service/headless">Headless & Composable Commerce</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
                             <circle cx="11" cy="11" r="10.5" stroke="#37C8AE"/>
                             <path d="M10.3416 7.17447L10.7777 6.73844C10.9623 6.55382 11.2608 6.55382 11.4435 6.73844L15.2616 10.5546C15.4463 10.7392 15.4463 11.0378 15.2616 11.2204L11.4435 15.0386C11.2589 15.2232 10.9603 15.2232 10.7777 15.0386L10.3416 14.6026C10.1551 14.416 10.159 14.1115 10.3495 13.9289L12.7162 11.6741H7.07147C6.81025 11.6741 6.6001 11.464 6.6001 11.2028V10.5743C6.6001 10.313 6.81025 10.1029 7.07147 10.1029H12.7162L10.3495 7.84814C10.157 7.66548 10.1531 7.36105 10.3416 7.17447Z" fill="white"/>
                             </svg></span></h3>
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                     <div class="service_tabs">
-                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/shopify-app">Shopify App Development</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                        <h3 class="service_tab-heading service_tablinks flex"><a routerLink="/service/shopify-app">Shopify App Development</a> <span class="tab-icon"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
                             <circle cx="11" cy="11" r="10.5" stroke="#37C8AE"/>
                             <path d="M10.3416 7.17447L10.7777 6.73844C10.9623 6.55382 11.2608 6.55382 11.4435 6.73844L15.2616 10.5546C15.4463 10.7392 15.4463 11.0378 15.2616 11.2204L11.4435 15.0386C11.2589 15.2232 10.9603 15.2232 10.7777 15.0386L10.3416 14.6026C10.1551 14.416 10.159 14.1115 10.3495 13.9289L12.7162 11.6741H7.07147C6.81025 11.6741 6.6001 11.464 6.6001 11.2028V10.5743C6.6001 10.313 6.81025 10.1029 7.07147 10.1029H12.7162L10.3495 7.84814C10.157 7.66548 10.1531 7.36105 10.3416 7.17447Z" fill="white"/>
                             </svg></span></h3>
