--- a/src/app/blog-list/blog-list.component.css
+++ b/src/app/blog-list/blog-list.component.css
@@ -24,10 +24,10 @@
     margin-bottom: 36px;
 }
 .blog-tab-section .blog-tab-main .blog-search #myInput {
-    width: 674px;
+    width: 744px;
     height: 55px;
     border: none;
-    border-radius: 10px 0 0 10px;
+    border-radius: 10px;
     background: #D9D9D9;
     padding: 18px 25px;
     outline: none;
@@ -38,7 +38,9 @@
     background: #37c8ae;
     height: 55px;
     width: 70px;
+    margin-left: -70px;
     border-radius: 0 10px 10px 0;
+    cursor: pointer;
 }
 .blog-tab-section .blog-tab-main .blog-search {
     margin-bottom: 60px;
@@ -64,6 +66,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 .blog-filter-tab .filter-tab-wrap .filter-tab-list .green-btn-text {
     text-decoration: none;
@@ -116,6 +119,9 @@
     .blog-filter-tab .filter-tab-wrap .filter-tab-list {
         margin-right: 20px;
     }
+    .blog-tab-section .blog-tab-main .blog-search #myInput {
+        width: 100%;
+    }
 }
 @media only screen and (min-width:768px) and (max-width:991px) {
     .blog-filter-tab .filter-tab-wrap .filter-tab-list .green-btn-text {
@@ -134,5 +140,10 @@
     }
     .blog-tab-section .blog-tab-main .blog-search .search-input-btn {
         height: 45px;
+    }
+}
+@media only screen and (min-width:992px) and (max-width:1024px) {
+    .blog-tab-section .blog-tab-main .blog-search #myInput {
+        width: 700px;
     }
 }
